--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,11 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
+body, h1, h2, h3, h4, h5, h6, p,
 figure, blockquote, dl, dd {
   margin-block-end: 0;
+  margin: 0;
+  font-family: "Pretendard", sans-serif;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
